--- a/locale/nl/LC_MESSAGES/hibernate-status-button.po
+++ b/locale/nl/LC_MESSAGES/hibernate-status-button.po
@@ -1,4 +1,4 @@
-# Polish translation of hibernate-status-button
+# Nederlands translation of hibernate-status-button
 # Copyright (C) 2021 tebaranowski
 # This file is distributed under the same license as the hibernate-status-button package.
 # tebaranowski <tomasz.baranowski@int.pl>, 2021.
